# gutenberg-analyzer-demo

./: .gitignore  README.md  manage.py  pyproject.toml
books/: admin.py  forms.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py
books/templates/: base.html
books/templates/books/: accessed_books.html  analysis_result.html  book_detail.html  home.html
books/templates/registration/: login.html
books/templatetags/: json_tags.py
gutenberg_analyzer/: asgi.py  settings.py  urls.py  wsgi.py
